# CatUI

./: .editorconfig  .gitignore  CMakeLists.txt  CatUI.sln  CatUI.sln.DotSettings  README.md
CatUI.PlatformExtension/: DispatcherBase.cs
docs/: docfx.json  index.md  toc.yml
docs/manual/: overview.md  supported-platforms.md  toc.yml
samples/BoxContainersExample/: BoxContainersExample.csproj  Program.cs
samples/CatTest/: CatTest.csproj  Program.cs
src/CatUI.Data/: BoundingRect.cs  CatApplication.cs  CatApplicationInitializer.cs  CatLogger.cs  CatObject.cs  CatPlatformDependentSetting.cs  CatSetting.cs  CatUI.Data.csproj  Color.cs  CornerInset.cs  Dimension.cs  EdgeInset.cs  ElementBounds.cs  GlobalSuppressions.cs  NumericKey.cs  ObservableProperty.cs  OutlineParams.cs  Point2D.cs  Rect.cs  Size.cs
src/CatUI.Elements/: CatUI.Elements.csproj  El.cs  Element.cs  ElementEventCheckingPartial.cs  ElementInputPartial.cs  ElementLayoutPartial.cs  ElementThemingPartial.cs  GlobalSuppressions.cs  ImageView.cs  PaddingElement.cs  Theme.cs  ThemeDefinition.cs  UIDocument.cs  UiDocument.cs
src/CatUI.Generator/: CatUI.Generator.csproj  PropertyBindingGenerator.cs
src/CatUI.Native/: CMakeLists.txt  CMakeSettings.json  egl_context_manager.cpp  egl_context_manager.h  utils.h  windowing.cpp  windowing.h
src/CatUI.NativeInterop/: CatUI.NativeInterop.csproj  EGL.cs  EglContextManager.cs  Windowing.cs
src/CatUI.Platform.Essentials/: CatUI.Platform.Essentials.csproj  DispatcherBase.cs  PlatformUiOptionsBase.cs
tool/: CatUIUtility.csproj  Program.cs  ThemeCommand.cs
(+229 files in other folders)
